# gitops-image-replacer

./: CHANGELOG.md  README.md  example.json  gitops-image-replacer.py  pyproject.toml
.github/workflows/: publish.yml  release.yml
src/gitops_image_replacer/: __init__.py  __main__.py
